add vms and clusters per user while listing all
